@@ -211,8 +211,14 @@ with similar per-core performance, you could run an OpenMP-enabled build
 on both of them and use "--node=1/9" (without "--fork") on the first
 machine (8 threads in 1 process) and "--fork=8 --node=2-9/9" on the
 64-core machine (8 threads in 8 processes, for 64 threads total on this
-machine).  With the current implementation, the node numbers range
-assigned to each John invocation must match the "--fork" process count.
+machine).  The node numbers range assigned to each John invocation must
+be a multiple of the "--fork" process count.  You'd usually have the
+number of nodes in the range exactly match the "--fork" process count,
+but you can use other multiples to compensate for major differences in
+per-process performance between different machines.  For example, on a
+machine where each process is twice faster than on another, you'd
+reasonably allocate two virtual node numbers per each "--fork" process,
+e.g. with "--fork=8 --node=9-24/24".
 
 When running with "--fork", multiple ".rec" files are created, which are
 then read back by "--status" and "--restore" if you use those options.
